# Signature-kernel

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
logsig-rl/: .gitignore
logsig-rl/src/logsig_rl/: cli.py  signature.py
logsig-rl/src/logsig_rl/agents/: base.py  unified.py
logsig-rl/src/logsig_rl/envs/: download.py
logsig-rl/src/logsig_rl/features/: adapters.py  wrapper.py
logsig-rl/src/logsig_rl/utils/: parsing.py  seeding.py
results/rl/a2c/^DJI/: lam_0.0000.csv  lam_0.0000_hparams.json  lam_0.5000_hparams.json  lam_1.0000.csv  lam_1.0000_hparams.json  lam_1.5000.csv  lam_1.5000_hparams.json  lam_2.0000.csv  lam_2.0000_hparams.json  lam_2.5000.csv  lam_2.5000_hparams.json  lam_3.0000.csv  lam_3.0000_hparams.json  lam_3.5000.csv  lam_3.5000_hparams.json  lam_4.0000.csv  lam_4.0000_hparams.json  lam_4.5000.csv  lam_4.5000_hparams.json  lam_5.0000.csv  lam_5.0000_hparams.json
results/rl/ddpg/^DJI/: lam_0.0000_hparams.json  lam_0.5000.csv  lam_0.5000_hparams.json  lam_1.0000.csv  lam_1.0000_hparams.json  lam_1.5000.csv  lam_1.5000_hparams.json  lam_2.0000.csv  lam_2.0000_hparams.json  (+12 more)
src/logsig_rl/: __init__.py  cli.py  config.py  main.py  plotting.py  siggp_markowitz.py
src/logsig_rl/agents/: __init__.py  base.py  markovitz.py  mpc.py  rl.py  sf_rl.py  sk_rl.py  sta.py  unified.py
src/logsig_rl/envs/: __init__.py  market.py  registry.py  sig_prefix_env.py
src/logsig_rl/models/: __init__.py  logsig_layer.py
src/logsig_rl/runners/: experiment.py
src/logsig_rl/signature/: __init__.py  core.py
src/logsig_rl/utils/: logging.py
(+313 files in other folders)
