[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logsig-rl"
version = "0.1.0"
description = "Unified RL with signature and state-feature adapters"
readme = "README.md"
requires-python = "==3.8"
license = {text = "MIT License"}
authors = [{name="Elias Khadraoui", email="elias.khadraoui@hotmail.com"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "torch>=2.2",
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "yfinance>=0.2",
  "tqdm>=4.66",
  "iisignature",
  "multitasking==0.0.11",
]

[tool.setuptools.packages.find]
where = ["src"]
